--- a/index.html
+++ b/index.html
@@ -2,17 +2,23 @@
 <html>
 
 <head>
+    <style type="text/css">
+        #bgImage {
+            background-image: linear-gradient(-20deg, #ddd6f3 0%, #faaca8 100%, #faaca8 100%);
+            background-size: cover;
+        }
+    </style>
     <link href="https://fonts.googleapis.com/css?family=Acme&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 </head>
 
-<body style="font-family: 'Acme', sans-serif;">
+<body style="font-family: 'Acme', sans-serif;" id="bgImage" class="text-dark">
     <div class="container-fluid" id="box">
         <div class="row my-2">
             <div class="col">
-                <div class="card border-danger">
-                    <div class="card-header bg-light m">
+                <div class="card border-danger shadow">
+                    <div class="card-header shadow">
                         <h1 class="text-center">ALL ABOUT MEALS</h1>
                         <button type="button" class="btn btn-outline-danger float-left m-1">Home</button>
                         <button type="button" class="btn btn-outline-danger float-left m-1">Feedback</button>
@@ -21,20 +27,23 @@
                 </div>
             </div>
         </div>
-        <div class="row">
-            <form class="col-6 offset-3 text-center p-5" id="mealSearch">
-                <label>Search</label>
-                <input type="text" name="mealName" class="form-control text-center p-3" placeholder="Search..." id="inputdata"></input>
-                <input type="submit" class="btn-block btn-outline-danger float-left m-1 text-center p-1"></input>
+        <div class="row m-3">
+            <img class="col-3 img-fluid shadow-lg p-3 rounded-circle" src="https://www.themealdb.com/images/meal-icon.png"></img>
+            <form class="col-6 text-center p-5" id="mealSearch">
+                <label>Search recipes of various Meals..</label>
+                <input type="text" name="mealName" class="form-control text-center p-3 shadow" placeholder="Search..."
+                    id="inputdata"></input>
+                <input type="submit" class="btn-block btn-outline-danger float-left m-1 text-center p-1 shadow" value="Click me"></input>
             </form>
+            <img class="col-3 img-fluid shadow-lg p-3 rounded-circle" src="https://www.themealdb.com/images/meal-icon.png"></img>
         </div>
-        <div id = "data">
+        <div id="data">
         </div>
     </div>
     <div id="showRecipe">
     </div>
 
-    <script type="text/javascript" src="/home/shabaz/coding/projects/masai/sprint-3/script.js"></script>
+    <script type="text/javascript" src="/home/shabaz/sprint-3/script.js"></script>
 </body>
 
 </html>
