--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
                 <div class="card border-danger shadow">
                     <div class="card-header shadow">
                         <h1 class="text-center">ALL ABOUT MEALS</h1>
-                        <button type="button" class="btn btn-outline-danger float-left m-1">Home</button>
-                        <button type="button" class="btn btn-outline-danger float-left m-1">Feedback</button>
+                        <button type="button" class="btn btn-danger float-left m-1">Home</button>
+                        <button type="button" class="btn btn-danger float-left m-1">Feedback</button>
                         <h6 class="float-right">created @masai<h6>
                     </div>
                 </div>
@@ -33,7 +33,7 @@
                 <label>Search recipes of various Meals..</label>
                 <input type="text" name="mealName" class="form-control text-center p-3 shadow" placeholder="Search..."
                     id="inputdata"></input>
-                <input type="submit" class="btn-block btn-outline-danger float-left m-1 text-center p-1 shadow" value="Click me"></input>
+                <input type="submit" class="btn-block btn-danger float-left m-1 text-center p-1 shadow" value="Click me"></input>
             </form>
             <img class="col-3 img-fluid shadow-lg p-3 rounded-circle" src="https://www.themealdb.com/images/meal-icon.png"></img>
         </div>
@@ -42,7 +42,12 @@
     </div>
     <div id="showRecipe">
     </div>
-
+    <div id="categories">
+        <h1 class="text-center">Categories of all the Meal Recipes we have</h1>
+    </div>
+    <div class="card-footer text-muted text-center">
+        Copyrights @shabaz k mullalkar
+    </div>
     <script type="text/javascript" src="/home/shabaz/sprint-3/script.js"></script>
 </body>
 
